# api/src/main/java/com/metafactory/luminabook/web/rest/UserResource.java
@@ -10,6 +10,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -41,5 +42,15 @@ public class UserResource {
         response.put("totalElements", page.getTotalElements());
 
         return ResponseEntity.ok(response);
+    }
+
+    @GetMapping("/user/{id}")
+    public ResponseEntity<AdminUserDTO> getUser(@PathVariable("id") String id) {
+        LOG.debug("REST request to get User : {}", id);
+        return userService
+            .getUserWithAuthoritiesById(id)
+            .map(AdminUserDTO::new)
+            .map(ResponseEntity::ok)
+            .orElse(ResponseEntity.notFound().build());
     }
 }
